--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "require-dev": {
         "cakephp/authorization": "^3.0",
         "cakephp/cakephp-codesniffer": "^5.0",
-        "phpunit/phpunit": "^10.5.5"
+        "phpunit/phpunit": "^10.5.5 || ^11.1.3"
     },
     "autoload": {
         "psr-4": {
