--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     },
     "require": {
         "php": ">=8.1",
-        "cakephp/cakephp": "dev-5.next as 5.1.0",
+        "cakephp/cakephp": "^5.1",
         "composer/composer": "^2.0",
         "doctrine/sql-formatter": "^1.1.3"
     },
